# KasperkyTestTask

./: .gitignore  .gitingore  CMakeLists.txt  README.md  base.csv  main.cpp  scanner.cpp
dll/: VirusScaner.cpp
include/: TimeGuard.hpp  VirusScaner.hpp  VirusScanner.hpp
openssl-3.5.3/: version.txt
openssl-3.5.3/arm64/include/openssl/: configuration.h  opensslv.h  ssl.h
openssl-3.5.3/arm64/lib/: libcrypto.lib  libssl.lib
openssl-3.5.3/x64/include/openssl/: configuration.h  crypto.h
openssl-3.5.3/x86/include/openssl/: configuration.h
openssl-3.5.3/x86/lib/: libcrypto.lib
src/: TimeGuard.cpp  VirusScaner.cpp
tests/: test_filescanner_md5.cpp  test_parser.cpp  test_scandirectory.cpp  test_virusdb.cpp
